removed some methods from API